Fixed skills images being clipped; Distanced paragraphs in About section"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,3 +103,7 @@ p {
     font-size: 8rem;
   }
 }
+
+#about p {
+  @apply mb-4;
+}
